[gd_scene load_steps=20 format=3 uid="uid://cwllxdufyg6l5"]

[ext_resource type="Script" path="res://player/player.gd" id="1_wllg7"]
[ext_resource type="PackedScene" uid="uid://dddqylwqmn7uc" path="res://player/marker/marker.tscn" id="2_y0hxq"]
[ext_resource type="Shader" path="res://player/player.gdshader" id="3_6vsd1"]
[ext_resource type="Texture2D" uid="uid://ccx5gdc8ug04p" path="res://player/tomato_tom.png" id="4_4kckn"]
[ext_resource type="AudioStream" uid="uid://cg5wm1781r4kd" path="res://audio/discord-notification-fx_G_major.wav" id="5_pqbiu"]
[ext_resource type="AudioStream" uid="uid://dfj65dafmvjfa" path="res://audio/spawn-death.mp3" id="6_uk84b"]
[ext_resource type="AudioStream" uid="uid://cvkjusv6db7tq" path="res://audio/stapler.mp3" id="7_kc7q8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3klh1"]
size = Vector2(28, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spmkk"]
size = Vector2(28, 36)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vw4b5"]
shader = ExtResource("3_6vsd1")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/range = 10.0
shader_parameter/time = 3.0
shader_parameter/is_on = 0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_cp1dv"]
polygon = PackedVector2Array(-11, -12, -11, -8, -9, -8, -9, -4, -10, -2, -11, 0, -13, 0, -13, 6, -11, 6, -11, 10, -11, 14, -13, 16, -13, 20, -11, 22, 11, 22, 13, 20, 13, 16, 10, 14, 8, 11, 11, 10, 11, 6, 13, 6, 13, 0, 11, -2, 9, -4, 9, -8, 11, -8, 11, -12)

[sub_resource type="Animation" id="Animation_jlb65"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_g1au5"]
resource_name = "die"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666666, 0.166667, 0.266667, 0.366667, 0.466667, 0.566667, 0.633333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(27.0184, -14.9669), Vector2(25.0368, -29.9693), Vector2(10.0527, -42.9877), Vector2(-12.9546, -37.0159), Vector2(-28.9644, -29.0356), Vector2(-28.984, -13.0356), Vector2(-20.9988, -1.02576), Vector2(0, -5.96046e-06)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.166667, 0.266667, 0.366667, 0.466667, 0.566667, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.809496, 0.0, 0.760411, 1.72914, 2.55501, 3.27505]
}

[sub_resource type="Animation" id="Animation_sl2gf"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hko8q"]
resource_name = "move_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_vg2he"]
resource_name = "move_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 7]
}

[sub_resource type="Animation" id="Animation_o1lgb"]
resource_name = "move_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_c2u8s"]
resource_name = "move_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbl4c"]
_data = {
"RESET": SubResource("Animation_jlb65"),
"die": SubResource("Animation_g1au5"),
"idle": SubResource("Animation_sl2gf"),
"move_down": SubResource("Animation_hko8q"),
"move_left": SubResource("Animation_vg2he"),
"move_right": SubResource("Animation_o1lgb"),
"move_up": SubResource("Animation_c2u8s")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 4
position = Vector2(-3.8147e-06, 5.72205e-06)
rotation = -0.00122648
collision_mask = 14
slide_on_ceiling = false
script = ExtResource("1_wllg7")
SPEED = 150
lives = 3
marker_scene = ExtResource("2_y0hxq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_3klh1")
debug_color = Color(0.917647, 0.21824, 0.470979, 0.42)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_spmkk")

[node name="PolygonTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 640

[node name="Hitstun" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vw4b5")
scale = Vector2(2.177, 2)
texture = ExtResource("4_4kckn")
hframes = 10

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D"]
visible = false
scale = Vector2(0.459348, 0.5)
occluder = SubResource("OccluderPolygon2D_cp1dv")

[node name="Polygon2D" type="Polygon2D" parent="Sprite2D/LightOccluder2D"]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(-11, -12, -11, -8, -9, -8, -9, -4, -10, -2, -11, 0, -13, 0, -13, 6, -11, 6, -11, 10, -11, 14, -13, 16, -13, 20, -11, 22, 11, 22, 13, 20, 13, 16, 10, 14, 8, 11, 11, 10, 11, 6, 13, 6, 13, 0, 11, -2, 9, -4, 9, -8, 11, -8, 11, -12)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tbl4c")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pqbiu")

[node name="SpawnDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_uk84b")

[node name="MarkerSound" type="AudioStreamPlayer2D" parent="."]
z_index = 4
stream = ExtResource("7_kc7q8")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="PolygonTimer" to="." method="_on_polygon_timer_timeout"]
[connection signal="timeout" from="Hitstun" to="." method="_on_hitstun_timeout"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
